--- a/portfolio/assets/css/index.css
+++ b/portfolio/assets/css/index.css
@@ -167,7 +167,6 @@ h1, p, ul, h2 {
 
 .carousel {
 	display: none;
-	text-align: center;
 }
 
 .carousel-active {
@@ -175,11 +174,13 @@ h1, p, ul, h2 {
 }
 
 .project-link{
+	text-align: center;
 	position: absolute;
 	color: white;
 	font-size: 50px;
 	top: 83%;
 	left: 30%;
+	right: 30%;
 	font-weight: 900;
 	text-decoration: none;
 	margin: 0;
