--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -86,3 +86,14 @@ body {
 .resetBtn {
 	display: none;
 }
+
+.btn {
+	padding: 1em 2.5em;
+}
+
+.centre-btn {
+	display: flex;
+	width: 400px;
+	margin: 1em auto;
+	justify-content: space-between;
+}
