--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -548,6 +548,7 @@ h3{font-size: var(--fs-h3);}
     margin-left: auto;
     margin-right: auto;
     line-height: 1.6;
+    font-size: 14px;
 }
 
 @media (min-width: 600px){
